--- a/record-replay/Makefile.in
+++ b/record-replay/Makefile.in
@@ -14,12 +14,13 @@ DMTCP_SRC=${DMTCP_ROOT}/dmtcp/src
 JALIB=${DMTCP_ROOT}/dmtcp/jalib
 
 HEADERS = constants.h fred_interface.h fred_wrappers.h log.h fred_types.h \
-	  synchronizationlogging.h threadinfo.h wrapper_util.h fred_read_log.h
+	  synchronizationlogging.h threadinfo.h  autogen/fred_wrappers_raw.h \
+	  autogen/wrapper_util.h autogen/fred_read_log.h
 # As you add new files to your hijack library, add the object file names here.
 FREDHIJACK_OBJS = fred_signalwrappers.o fred_epollwrappers.o \
 	fred_mallocwrappers.o fred_filewrappers.o fred_syscallsreal.o \
 	fred_socketwrappers.o pthreadwrappers.o netwrappers.o fred.o \
-	fred_miscwrappers.o syscallsreal_helper.o
+	fred_miscwrappers.o syscallsreal_helper.o wrapper_util.o
 
 LIBFREDINTERNAL_OBJS = synchronizationlogging.o log.o fred_trampolines.o \
 		       threadinfo.o wrapper_util.o
@@ -59,6 +60,11 @@ fred_read_log: ${FRED_READ_LOG_OBJS} libfredinternal.a
 # We link the library using C++ for compatibility with the main dmtcphijack.so
 ${LIBNAME}.so: ${FREDHIJACK_OBJS} ${LIBFREDINTERNAL_OBJS} libfredinternal.a
 	${CXX} -shared -fPIC -o $@ $^
+
+%.o: autogen/%.c ${HEADERS}
+	${CC} ${CFLAGS} -I. -o $@ $<
+%.o: autogen/%.cpp ${HEADERS}
+	${CXX} ${CXXFLAGS} -I${DMTCP_SRC} -I${JALIB} -I. -o $@ $<
 
 .c.o: ${HEADERS}
 	${CC} ${CFLAGS} -I. -o $@ $<
